[tool.poetry]
name = "paperq"
version = "0.1.0"
description = ""
authors = ["Francisco Perez-Sorrosal <fperezsorrosal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
arxiv = "^2.1.0"
langchain = "^0.1.12"
unstructured = "^0.12.6"
streamlit = "^1.32.1"
llm = "^0.13.1"
streamlit-pdf-viewer = "^0.0.8"
pymupdf = "^1.23.26"
pdf2image = "^1.17.0"
pdfminer = "^20191125"
pdfminer-six = "^20231228"
pillow = "^10.2.0"
pillow-heif = "^0.15.0"
opencv-python = "^4.9.0.80"
unstructured-inference = "^0.7.24"
pytesseract = "^0.3.10"
unstructured-pytesseract = "^0.3.12"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
pytest = "^7.1.3"
shellcheck-py = "^0.8.0.4"
isort = "^5.12.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ["py311"]